:zap: cache sequence data with BioSeqDatabase

--- a/notebooks/exploratory/0.15.0-bunop-check_goat_coordinates.ipynb
+++ b/notebooks/exploratory/0.15.0-bunop-check_goat_coordinates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "color-resource",
+   "id": "selective-stupid",
    "metadata": {},
    "source": [
     "# Check Goat coordinates\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "announced-possibility",
+   "id": "ecological-guide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "from ensemblrest import EnsemblRest\n",
     "from Bio import Entrez\n",
     "from Bio import SeqIO\n",
+    "from BioSQL import BioSeqDatabase\n",
     "\n",
     "from src.data.common import WORKING_ASSEMBLIES\n",
     "from src.features.utils import get_project_dir, text_or_gzip_open, sanitize\n",
@@ -45,6 +46,10 @@
     "data_dir = get_project_dir() / \"data/external/GOA/CONSORTIUM\"\n",
     "capri_all_data = data_dir / \"capri4dbsnp-base-CHI-ARS-OAR-UMD.csv.gz\"\n",
     "\n",
+    "# define the NCBI database local file\n",
+    "ncbi_database = get_project_dir() / \"data/external/GOA/NCBI/biosqldb-goat.sqlite3\"\n",
+    "ncbi_conn = BioSeqDatabase.open_database(driver='sqlite3', db=ncbi_database)\n",
+    "\n",
     "# make a connection to smarter database\n",
     "global_connection()\n",
     "\n",
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharing-glance",
+   "id": "honey-literature",
    "metadata": {},
    "source": [
     "Defining some useful functions:"
@@ -63,24 +68,34 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "demonstrated-ceramic",
+   "id": "clean-memorabilia",
    "metadata": {},
    "outputs": [],
    "source": [
     "@functools.lru_cache(maxsize=1000)\n",
-    "def get_chr_from_ncbi(chrom_name: str):\n",
+    "def get_chr_from_ncbi(chrom_name: str, conn: BioSeqDatabase.DBServer):\n",
     "    if chrom_name == 'null':\n",
     "        return None\n",
     "    \n",
     "    if chrom_name.isdigit():\n",
     "        return chrom_name\n",
     "    \n",
-    "    # get data from NCBI\n",
-    "    with Entrez.efetch(db=\"nucleotide\", id=chrom_name, rettype=\"gb\", retmode=\"text\") as handle:\n",
-    "        record = SeqIO.read(handle, \"genbank\")\n",
+    "    # if db doesn't exists, conn.new_database(\"goat\")\n",
+    "    db = conn[\"goat\"]\n",
+    "    \n",
+    "    try:\n",
+    "        record = db.lookup(primary_id=chrom_name)\n",
+    "        \n",
+    "    except IndexError:\n",
+    "        # get data from NCBI\n",
+    "        with Entrez.efetch(db=\"nucleotide\", id=chrom_name, rettype=\"gb\", retmode=\"text\") as handle:\n",
+    "            record = SeqIO.parse(handle, \"genbank\")\n",
+    "            # write data to db\n",
+    "            db.load(record)\n",
+    "            conn.commit()\n",
+    "            record = db.lookup(primary_id=chrom_name)\n",
     "        \n",
     "    return record.features[0].qualifiers[\"chromosome\"][0]\n",
-    "\n",
     "\n",
     "def check_coordinates_chi1(record, variant):\n",
     "    check = True\n",
@@ -120,11 +135,11 @@
     "\n",
     "            # fix chi1 chrom names\n",
     "            idx = header.index('chi_1_0_chr')\n",
-    "            line[idx] = get_chr_from_ncbi(line[idx])\n",
+    "            line[idx] = get_chr_from_ncbi(line[idx], ncbi_conn)\n",
     "\n",
     "            # fix ars1 chrom_name\n",
     "            idx = header.index('ars1_chr')\n",
-    "            line[idx] = get_chr_from_ncbi(line[idx])\n",
+    "            line[idx] = get_chr_from_ncbi(line[idx], ncbi_conn)\n",
     "            \n",
     "            # make a record from csv line\n",
     "            record = Record._make(line)\n",
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-season",
+   "id": "steady-advice",
    "metadata": {},
    "source": [
     "Now check *CHI1* coordinates:"
@@ -162,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nominated-nickname",
+   "id": "public-creativity",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eight-photographer",
+   "id": "iraqi-laugh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "actual-taste",
+   "id": "mediterranean-kingdom",
    "metadata": {},
    "outputs": [
     {
@@ -498,15 +513,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "needed-nutrition",
+   "id": "european-shore",
    "metadata": {},
    "source": [
-    "Coordinates seems to match with database for *CHI1* assembly. Differences are in contigs (unknown chromosomes)"
+    "Coordinates seems to match with database for *CHI1* assembly. Differences are in contigs (unknown chromosomes). What about missing snps? They are not defined in chip"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "geographic-daisy",
+   "id": "civilian-passing",
    "metadata": {},
    "source": [
     "## Working with ARS1 coordinates\n",
@@ -516,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bound-holiday",
+   "id": "fancy-holly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optimum-haven",
+   "id": "acknowledged-permit",
    "metadata": {},
    "source": [
     "Search mismatches in *ARS1* assembly:"
@@ -549,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "treated-resident",
+   "id": "experimental-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "extended-metro",
+   "id": "attempted-elevation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "southeast-nicholas",
+   "id": "massive-tucson",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collected-monaco",
+   "id": "muslim-institute",
    "metadata": {},
    "source": [
     "There are few mismatches from received coordinates and the data I have in the database. However, the smarter data comes from the latest chip so I belive I can trust it. There are some considerations to made about SNP placement: I thick I need to cross-check with ensembl and try to align the probe myself to understand if there are issues on chip placement"
