:memo: describe better the problems with sheep coordinates

--- a/notebooks/exploratory/0.15.0-bunop-check_sheep_coordinates.ipynb
+++ b/notebooks/exploratory/0.15.0-bunop-check_sheep_coordinates.ipynb
@@ -7,7 +7,12 @@
    "source": [
     "# Check Sheep coordinates\n",
     "## Check sheep coordinates with data provided by Sheep genome project\n",
-    "I received a series of `.csv` files with variants coordinates in the major assemblies version for *Sheep* and *Goat* genomes. I will check those coordinates with the coordinates I have to find potential mismatches\n",
+    "I received a series of `.csv` files with variants coordinates in the major assemblies version for *Sheep* and *Goat* genomes. In this notebook I will check sheep coordinates (wich comes from [ISGC](https://figshare.com/articles/dataset/Mapping_of_ISGC_SNP_chip_probes/8424935/2) with the coordinates I have in my database to find potential mismatches. Due to data dimension, I will check variants of *50K* chip.\n",
+    "\n",
+    "* [Working on OAR3](#working-on-oar3)\n",
+    "* [Working on OAR4](#working-on-oar4)\n",
+    "\n",
+    "<a id='working-on-oar3'></a>\n",
     "### Working on OAR3"
    ]
   },
@@ -16,7 +21,7 @@
    "id": "democratic-trigger",
    "metadata": {},
    "source": [
-    "Define some stuff before checking coordinates"
+    "Define some stuff before checking coordinates (like database connections, where to find files, connection to EnsEMBL, etc.)"
    ]
   },
   {
@@ -36,7 +41,7 @@
     "from ensemblrest import EnsemblRest\n",
     "\n",
     "from src.data.common import WORKING_ASSEMBLIES\n",
-    "from src.features.utils import get_project_dir, text_or_gzip_open\n",
+    "from src.features.utils import get_project_dir, text_or_gzip_open, get_interim_dir\n",
     "from src.features.smarterdb import global_connection, VariantSheep\n",
     "\n",
     "# define ensemblrest helper\n",
@@ -50,7 +55,11 @@
     "global_connection()\n",
     "\n",
     "# get the smarter assembly I want to test\n",
-    "OAR3 = WORKING_ASSEMBLIES['OAR3']"
+    "OAR3 = WORKING_ASSEMBLIES['OAR3']\n",
+    "\n",
+    "# define a folder in which put all results of such explorative analyses:\n",
+    "result_dir = get_interim_dir() / \"issue-18\"\n",
+    "result_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -69,6 +78,9 @@
    "outputs": [],
    "source": [
     "def check_coordinates(record, variant):\n",
+    "    \"\"\"Get a record from a datafile and check if position is the same\n",
+    "    recorded in database\"\"\"\n",
+    "    \n",
     "    check = True\n",
     "    location = variant.locations[0]\n",
     "    \n",
@@ -85,7 +97,10 @@
     "    return check\n",
     "\n",
     "\n",
-    "def search_mismatches(datafile, smarter_assembly):    \n",
+    "def search_mismatches(datafile, smarter_assembly):\n",
+    "    \"\"\"Get a datafile and smarter assembly version returns an array\n",
+    "    of different SNPs position between the two data sources\"\"\"\n",
+    "    \n",
     "    # track mismatches in positions\n",
     "    mismatches = []\n",
     "\n",
@@ -126,7 +141,7 @@
    "id": "narrow-opening",
    "metadata": {},
    "source": [
-    "Now check provided coordinates with the coordinates stored in database:"
+    "Now check provided coordinates (*ISGC*) with the coordinates stored in database:"
    ]
   },
   {
@@ -152,12 +167,37 @@
    "id": "respected-speed",
    "metadata": {},
    "source": [
-    "Ok, let's take some random mismatch locations, and try to get informations from ensembl:"
+    "This value is not surprising. At the moment, the smarter coordinates are based on [SNPchimp V3](https://webserver.ibba.cnr.it/SNPchimp/), which was last updated in 2016. I suppose that such mismatches are due to a better SNP placement of *ISGC* data file. Track those results in a csv file:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "db7d4151-1293-4eed-8af6-2eda083a563b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(result_dir / \"isgc_vs_smarter-mismatches-oar3.csv\", \"w\") as handle:\n",
+    "    writer = csv.writer(handle, delimiter=\",\", lineterminator=\"\\n\")\n",
+    "    header = ['name', 'isgc_chr', 'isgc_pos', 'smarter_chr', 'smarter_pos']\n",
+    "    writer.writerow(header)\n",
+    "    \n",
+    "    for [record, variant] in mismatches_oar3:\n",
+    "        line = [record.entry, record.chrom, record.pos, variant.locations[0].chrom, variant.locations[0].position]\n",
+    "        writer.writerow(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc262e45-fe16-4ce3-8b29-0b81a0c63fe6",
+   "metadata": {},
+   "source": [
+    "Let's take some random mismatch locations, and try to get informations from ensembl and see if coordinates are the same:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "certain-notice",
    "metadata": {},
    "outputs": [],
@@ -182,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "curious-queen",
    "metadata": {},
    "outputs": [
@@ -488,7 +528,7 @@
        "19            21   16195822.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,13 +571,14 @@
    "id": "korean-promise",
    "metadata": {},
    "source": [
-    "## Working with OAR4 coordinates\n",
+    "<a id='working-on-oar4'></a>\n",
+    "## Working with OAR4\n",
     "Now let's check the latest coordinates version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dedicated-lambda",
    "metadata": {},
    "outputs": [],
@@ -559,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "exterior-enhancement",
    "metadata": {},
    "outputs": [
@@ -576,8 +617,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65bfbd7e-430e-4797-aa5a-d7195b40cebe",
+   "metadata": {},
+   "source": [
+    "The same considerations applied in *OAR3* applied here: The *SNPchimp v3* reference seems to be older than this source. Track mismatches in a *csv* file:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "id": "e7e69f32-4e64-458b-a223-f2b5947bff2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(result_dir / \"isgc_vs_smarter-mismatches-oar4.csv\", \"w\") as handle:\n",
+    "    writer = csv.writer(handle, delimiter=\",\", lineterminator=\"\\n\")\n",
+    "    header = ['name', 'isgc_chr', 'isgc_pos', 'smarter_chr', 'smarter_pos']\n",
+    "    writer.writerow(header)\n",
+    "    \n",
+    "    for [record, variant] in mismatches_oar4:\n",
+    "        line = [record.entry, record.chrom, record.pos, variant.locations[0].chrom, variant.locations[0].position]\n",
+    "        writer.writerow(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae830b7b-2f8b-4626-8307-a513a194a511",
+   "metadata": {},
+   "source": [
+    "Now select some random SNPs and check their values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "amateur-paragraph",
    "metadata": {},
    "outputs": [],
@@ -588,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "female-nightlife",
    "metadata": {},
    "outputs": [
@@ -830,7 +904,7 @@
        "19   OAR21_12752894.1    21   11150475  rs403193973            21     11150476"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
