:recycle: plot image for SMARTER notebook/results

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -134,7 +134,8 @@
     "foreground_sheeps = SampleSheep.objects.filter(dataset__in=Dataset.objects.filter(type_=\"foreground\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
     "background_sheeps = SampleSheep.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
     "samples_sheep = pd.Series({\"foreground\": foreground_sheeps.count(), \"background\": background_sheeps.count()}, name=\"Sheeps\")\n",
-    "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')"
+    "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
+    "plt.savefig('sheep-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -225,7 +226,8 @@
     "plot = foreground_sheeps.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
     "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
-    "_ = plt.title(\"SMARTER Sheep Samples\")"
+    "_ = plt.title(\"SMARTER Sheep Samples\")\n",
+    "plt.savefig('sheep-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -244,10 +246,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foreground_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"foreground\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
-    "background_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
+    "foreground_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"foreground\")).fields(country=True, breed=True, chip_name=True, locations=True, metadata=True)\n",
+    "background_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True, metadata=True)\n",
     "samples_goat = pd.Series({\"foreground\": foreground_goats.count(), \"background\": background_goats.count()}, name=\"Goats\")\n",
-    "plot = samples_goat.plot.pie(y=\"Goat\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')"
+    "plot = samples_goat.plot.pie(y=\"Goat\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
+    "plt.savefig('goat-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -296,7 +299,8 @@
     "plot = foreground_goats.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
     "plot = background_goats.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
-    "_ = plt.title(\"SMARTER Goat Samples\")"
+    "_ = plt.title(\"SMARTER Goat Samples\")\n",
+    "plt.savefig('goat-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -305,7 +309,37 @@
    "id": "0f71dc8c-b9c9-404a-a53a-87f7415c147a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "world[world.continent == \"Europe\"].plot(ax=ax, color='white', edgecolor='gray')\n",
+    "plot = foreground_goats.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
+    "plot = background_goats.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
+    "plot = ax.legend()\n",
+    "_ = plt.title(\"SMARTER Goat Samples foreground\")\n",
+    "_ = plt.xlim([10,40])\n",
+    "_ = plt.ylim([30, 50])\n",
+    "plt.savefig('goat-foreground.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4bff84-34c1-4526-898e-b6dfe93b1148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foreground_goats['region'] = foreground_goats[foreground_goats.country == \"Greece\"]['metadata'].apply(lambda metadata: metadata['region'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e49a15de-a54c-427e-aed6-62c93bc9fe74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foreground_goats.value_counts('region')"
+   ]
   }
  ],
  "metadata": {
