--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -25,6 +25,8 @@
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Point\n",
     "import geopandas as gpd\n",
+    "import pycountry\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "from src.features.smarterdb import global_connection, Dataset, SampleSheep, SampleGoat\n",
     "\n",
@@ -231,6 +233,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59661892-0045-4fa9-8a3b-18d91c03e97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "world[world.continent == \"Europe\"].plot(ax=ax, color='white', edgecolor='gray')\n",
+    "plot = foreground_sheeps.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
+    "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
+    "plot = ax.legend()\n",
+    "_ = plt.title(\"SMARTER Sheep Samples foreground\")\n",
+    "_ = plt.xlim([10,40])\n",
+    "_ = plt.ylim([30, 50])\n",
+    "plt.savefig('sheep-foreground.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7a43aa07-76aa-4ca7-97c4-b4b4320377da",
    "metadata": {},
@@ -340,6 +360,153 @@
    "source": [
     "foreground_goats.value_counts('region')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c3c128e-f8a7-47fd-812b-89266bcec1ca",
+   "metadata": {},
+   "source": [
+    "## Draw samples by countries\n",
+    "### Sheep by country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe82880-0183-4706-b809-c29db84f9fe7",
+   "metadata": {},
+   "source": [
+    "Collect all sheep samples in a dataframe. Fix *ISO3* codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfef48b4-efc2-4fee-b272-1d4cb6b486c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_sheeps = pd.concat([foreground_sheeps, background_sheeps], axis=0)\n",
+    "sheeps_by_country = all_sheeps.value_counts('country')\n",
+    "sheeps_by_country = pd.DataFrame(data=sheeps_by_country, columns=['count']).reset_index()\n",
+    "sheeps_by_country['iso_a3'] = sheeps_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a556294-6657-4352-9920-4ddc00f76939",
+   "metadata": {},
+   "source": [
+    "Now fix *ISO3* on world dataset. Then merge dataframe on *ISO3*. Cast to a `GeoDataFrame`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a1c513-e5c0-4398-850f-80ab0f5b0087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_iso_a3(name, iso_a3):\n",
+    "    if iso_a3 == '-99':\n",
+    "        try:\n",
+    "            return pycountry.countries.search_fuzzy(name.split()[-1])[0].alpha_3\n",
+    "        except LookupError:\n",
+    "            return \"-99\"\n",
+    "    else:\n",
+    "        return iso_a3\n",
+    "    \n",
+    "world['iso_a3'] = world[['name', 'iso_a3']].apply(lambda df: fix_iso_a3(df['name'], df['iso_a3']), axis=1)\n",
+    "sheeps_by_country = pd.merge(sheeps_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
+    "sheeps_by_country = gpd.GeoDataFrame(sheeps_by_country)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c9bb45f-162a-4481-b59c-477d449d7f74",
+   "metadata": {},
+   "source": [
+    "Now draw a chloroplet map using `matplotlib`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b915c977-de8f-4aa5-9e25-a57ab24d6db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "plot = sheeps_by_country.plot(\n",
+    "    column='count', \n",
+    "    ax=ax, \n",
+    "    legend=True, \n",
+    "    cax=cax,\n",
+    "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
+    "_ = ax.set_title(\"SMARTER Sheep Samples by country\")\n",
+    "plt.savefig('sheep-by-country.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4dcb1c3-3420-4122-a14a-62e7d12297be",
+   "metadata": {},
+   "source": [
+    "### Goat by country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2102c053-8030-4878-8288-a0611c859e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_goats = pd.concat([foreground_goats, background_goats], axis=0)\n",
+    "goats_by_country = all_goats.value_counts('country')\n",
+    "goats_by_country = pd.DataFrame(data=goats_by_country, columns=['count']).reset_index()\n",
+    "goats_by_country['iso_a3'] = goats_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30b33efc-b611-45c0-96a4-edaca2072ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goats_by_country = pd.merge(goats_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
+    "goats_by_country = gpd.GeoDataFrame(goats_by_country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76caeedd-a6ad-4803-99d2-a17f9fd9836b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "plot = goats_by_country.plot(\n",
+    "    column='count', \n",
+    "    ax=ax, \n",
+    "    legend=True, \n",
+    "    cax=cax,\n",
+    "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
+    "_ = ax.set_title(\"SMARTER Goat Samples by country\")\n",
+    "plt.savefig('goat-by-country.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "684399a7-a88f-44db-a98a-b5b1400ba4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
