:recycle: update greek metadata

--- a/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
+++ b/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
@@ -209,7 +209,8 @@
     "        index = df[(df['Code'] == breed_code) & (df['selected'] == True)].index.values[0]\n",
     "        return index\n",
     "    except IndexError as exc:\n",
-    "        print(breed_code, sample_name, farm_coding)"
+    "        print(breed_code, sample_name, farm_coding)\n",
+    "        raise exc"
    ]
   },
   {
@@ -227,7 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])"
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
    ]
   },
   {
@@ -243,7 +245,15 @@
    "execution_count": 11,
    "id": "96816897-9d9b-457c-9ffd-26f8acd961b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614ece6d6ac707ecf33bd641 AUTH_OVN50KV2_CHIOS_FRIZARTA.zip\n"
+     ]
+    }
+   ],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
@@ -251,7 +261,8 @@
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
     "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)"
+    "merged.to_excel(outfile, index=False)\n",
+    "print(dataset.id, dataset.file)"
    ]
   },
   {
@@ -318,7 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])"
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
    ]
   },
   {
@@ -326,7 +338,15 @@
    "execution_count": 17,
    "id": "c9b68a80-ffa3-4f8f-b507-d906ae29d198",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614ece766ac707ecf33bd642 AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA.zip\n"
+     ]
+    }
+   ],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
@@ -334,7 +354,8 @@
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
     "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)"
+    "merged.to_excel(outfile, index=False)\n",
+    "print(dataset.id, dataset.file)"
    ]
   },
   {
@@ -369,25 +390,32 @@
    "id": "1e19d0af-ee4d-41c7-b301-61668b40f0ad",
    "metadata": {},
    "source": [
-    "This dataset has SNPs with extra chroms. So, the only way to get a sample list is to parse the first two columns of `.fam` file:"
+    "This dataset has SNPs with extra chroms. Open with `plinkio` custom version:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "911b6e77-9e22-4c42-ad20-4bf915884522",
+   "id": "fb37ea09-b496-4e47-8c38-f9fbf43e6af6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fam_file = dataset.working_dir / \"AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO/AUTH_OVN50KV02_CHI_MYT_BOU.fam\"\n",
-    "with open(fam_file) as handle:\n",
-    "    reader = csv.reader(handle, delimiter=\"\\t\")\n",
-    "    samples = [[sample[0], sample[1]] for sample in reader]"
+    "plink_file = plinkfile.open( str(dataset.working_dir / \"AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO/AUTH_OVN50KV02_CHI_MYT_BOU\") )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "ec9edf7e-e1d8-4fe5-9c0a-709a0b00b17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = [(sample.fid, sample.iid) for sample in plink_file.get_samples()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "dd969a9f-3976-40a8-a1cd-51779d4a0156",
    "metadata": {},
    "outputs": [],
@@ -397,20 +425,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "1a402937-b1a2-4ab4-ad05-5f6477660290",
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])"
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "74848126-e99c-4af8-85ed-7222bd4a36db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614ece886ac707ecf33bd643 AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO.zip\n"
+     ]
+    }
+   ],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
@@ -418,7 +455,8 @@
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
     "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)"
+    "merged.to_excel(outfile, index=False)\n",
+    "print(dataset.id, dataset.file)"
    ]
   },
   {
@@ -433,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "9c968c52-e112-4486-92d9-5712a9472019",
    "metadata": {},
    "outputs": [],
@@ -451,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "f70b96b3-ef07-4a24-aca2-d44e51bc8bde",
    "metadata": {},
    "outputs": [],
@@ -461,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "e8ddf669-298a-40c8-96fe-05ce66b7f161",
    "metadata": {},
    "outputs": [],
@@ -471,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "9da3bb80-1618-4b07-bddc-e34644b21a20",
    "metadata": {},
    "outputs": [],
@@ -481,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "ce21c737-07fd-4327-8823-46754803e613",
    "metadata": {},
    "outputs": [],
@@ -491,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "13657182-9d2d-447c-a18e-c743f38dc004",
    "metadata": {},
    "outputs": [],
@@ -501,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "062c8edd-5118-4516-9cab-e279dd94e368",
    "metadata": {},
    "outputs": [],
@@ -532,35 +570,35 @@
     "        index = df[(df['Code'] == breed_code) & (df['selected'] == True)].index.values[0]\n",
     "        return index\n",
     "    except IndexError as exc:\n",
-    "        # print(breed_code, sample_name, farm_coding)\n",
-    "        return -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "90cb14b9-f6e9-4fa9-b443-3c6fddda9284",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/paolo/Softwares/anaconda3/envs/SMARTER-database/lib/python3.9/site-packages/numpy/lib/function_base.py:2197: RuntimeWarning: invalid value encountered in get_metadata_row (vectorized)\n",
-      "  outputs = ufunc(*inputs)\n"
-     ]
-    }
-   ],
-   "source": [
-    "samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])"
+    "        print(breed_code, sample_name, farm_coding)\n",
+    "        raise exc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "660098fa-9201-4420-b7c0-2a17a3cd9c79",
+   "id": "90cb14b9-f6e9-4fa9-b443-3c6fddda9284",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "660098fa-9201-4420-b7c0-2a17a3cd9c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614ece936ac707ecf33bd644 AUTH_GOAT53KV1_EGHORIA_SKOPELOS.zip\n"
+     ]
+    }
+   ],
    "source": [
     "merged = samples.join(goat_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
@@ -568,7 +606,8 @@
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
     "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)"
+    "merged.to_excel(outfile, index=False)\n",
+    "print(dataset.id, dataset.file)"
    ]
   },
   {
