--- a/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
+++ b/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
@@ -9,7 +9,8 @@
     "* [AUTH_OVN50KV2_CHI_FRI](#dataset0)\n",
     "* [AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA](#dataset1)\n",
     "* [AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO](#dataset2)\n",
-    "* [AUTH_GOAT53KV1_EGHORIA_SKOPELOS](#dataset3)"
+    "* [AUTH_GOAT53KV1_EGHORIA_SKOPELOS](#dataset3)\n",
+    "* [closing phenotype file](#closing)"
    ]
   },
   {
@@ -19,8 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import re\n",
     "import csv\n",
+    "import zipfile\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
@@ -28,7 +32,7 @@
     "from plinkio import plinkfile\n",
     "\n",
     "from src.features.smarterdb import global_connection, Dataset\n",
-    "from src.features.utils import get_raw_dir\n",
+    "from src.features.utils import get_raw_dir, get_interim_dir\n",
     "\n",
     "_ = global_connection()"
    ]
@@ -104,6 +108,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af88d92e-7d91-4ad2-a80a-4bb1af1956c3",
+   "metadata": {},
+   "source": [
+    "Prepare a phenotype archive to put all metadata information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "104c2ba7-d30b-42ae-aed8-6527f08eee0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(get_interim_dir())\n",
+    "phenotype_file = zipfile.ZipFile(\"greece_foreground_metadata.zip\", \"w\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c412a99-619f-4a8f-b9b7-da1b08c2be18",
    "metadata": {},
    "source": [
@@ -114,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "649c8d50-ce86-4175-b4f4-a8f5daadebf2",
    "metadata": {},
    "outputs": [],
@@ -132,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fa3e7798-4e20-40e5-8af9-5f744f1dce89",
    "metadata": {},
    "outputs": [],
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3857fa1d-24d7-4152-a2aa-741226830763",
    "metadata": {},
    "outputs": [],
@@ -160,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "eae2f4c6-93fa-4c44-b996-aaf10e3e585a",
    "metadata": {},
    "outputs": [],
@@ -178,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "34849073-06a2-4f1b-84b8-0583dfa893cc",
    "metadata": {},
    "outputs": [],
@@ -223,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "db6821ff-48f0-4e29-ad7e-cdacf53e7333",
    "metadata": {},
    "outputs": [],
@@ -242,27 +265,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "96816897-9d9b-457c-9ffd-26f8acd961b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "614ece6d6ac707ecf33bd641 AUTH_OVN50KV2_CHIOS_FRIZARTA.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
     "merged = merged.drop(\"parsed_coding\", axis=1)\n",
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
-    "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)\n",
-    "print(dataset.id, dataset.file)"
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3379815f-4fe1-4994-888c-dc13e240800d",
+   "metadata": {},
+   "source": [
+    "Add this file to phenotype archive:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4eaa05b9-6188-42c1-acac-2d5ab09f2435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(outfile)\n",
+    "outpath.unlink()"
    ]
   },
   {
@@ -284,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "2d6f1979-e23f-4b82-a739-11f93fa4b6f0",
    "metadata": {},
    "outputs": [],
@@ -294,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "8dc115ad-e948-4a13-9e29-d13b3ae36291",
    "metadata": {},
    "outputs": [],
@@ -304,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "66283b49-7fb1-4ee5-be07-19567310767b",
    "metadata": {},
    "outputs": [],
@@ -314,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "9518f391-55ab-475d-a4b6-902a77956c2f",
    "metadata": {},
    "outputs": [],
@@ -324,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "7d44efbf-4e23-47be-9780-19c80b39f86b",
    "metadata": {},
    "outputs": [],
@@ -335,27 +369,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "c9b68a80-ffa3-4f8f-b507-d906ae29d198",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "614ece766ac707ecf33bd642 AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
     "merged = merged.drop(\"parsed_coding\", axis=1)\n",
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
-    "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)\n",
-    "print(dataset.id, dataset.file)"
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed53f52-36aa-4286-871d-30382c0c3e19",
+   "metadata": {},
+   "source": [
+    "Add this file to phenotype archive:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7440c6fc-5386-40e9-89c6-36e6459fe8af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(outfile)\n",
+    "outpath.unlink()"
    ]
   },
   {
@@ -377,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "69325c3f-80b3-4760-b210-7ba208c68673",
    "metadata": {},
    "outputs": [],
@@ -395,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "fb37ea09-b496-4e47-8c38-f9fbf43e6af6",
    "metadata": {},
    "outputs": [],
@@ -405,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "ec9edf7e-e1d8-4fe5-9c0a-709a0b00b17f",
    "metadata": {},
    "outputs": [],
@@ -415,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "dd969a9f-3976-40a8-a1cd-51779d4a0156",
    "metadata": {},
    "outputs": [],
@@ -425,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "1a402937-b1a2-4ab4-ad05-5f6477660290",
    "metadata": {},
    "outputs": [],
@@ -436,27 +481,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "74848126-e99c-4af8-85ed-7222bd4a36db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "614ece886ac707ecf33bd643 AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
     "merged = merged.drop(\"parsed_coding\", axis=1)\n",
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
-    "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)\n",
-    "print(dataset.id, dataset.file)"
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10902bf0-3eae-4759-b8fe-0f5418158374",
+   "metadata": {},
+   "source": [
+    "Add this file to phenotype archive:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8da43d93-e6b2-429c-b276-a8a498ee3635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(outfile)\n",
+    "outpath.unlink()"
    ]
   },
   {
@@ -471,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "9c968c52-e112-4486-92d9-5712a9472019",
    "metadata": {},
    "outputs": [],
@@ -489,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "f70b96b3-ef07-4a24-aca2-d44e51bc8bde",
    "metadata": {},
    "outputs": [],
@@ -499,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "e8ddf669-298a-40c8-96fe-05ce66b7f161",
    "metadata": {},
    "outputs": [],
@@ -509,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "9da3bb80-1618-4b07-bddc-e34644b21a20",
    "metadata": {},
    "outputs": [],
@@ -519,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "ce21c737-07fd-4327-8823-46754803e613",
    "metadata": {},
    "outputs": [],
@@ -529,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "13657182-9d2d-447c-a18e-c743f38dc004",
    "metadata": {},
    "outputs": [],
@@ -539,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "062c8edd-5118-4516-9cab-e279dd94e368",
    "metadata": {},
    "outputs": [],
@@ -576,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "90cb14b9-f6e9-4fa9-b443-3c6fddda9284",
    "metadata": {},
    "outputs": [],
@@ -587,36 +643,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "660098fa-9201-4420-b7c0-2a17a3cd9c79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "614ece936ac707ecf33bd644 AUTH_GOAT53KV1_EGHORIA_SKOPELOS.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "merged = samples.join(goat_dataset, on=\"metadata_idx\")\n",
     "merged = merged.drop(\"selected\", axis=1)\n",
     "merged = merged.drop(\"parsed_coding\", axis=1)\n",
     "merged = merged.drop(\"metadata_idx\", axis=1)\n",
     "\n",
-    "outfile = str(dataset.working_dir / Path(dataset.file).stem) + \".xlsx\"\n",
-    "merged.to_excel(outfile, index=False)\n",
-    "print(dataset.id, dataset.file)"
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13bff001-ad5a-4b15-b071-4687b0f1107f",
+   "metadata": {},
+   "source": [
+    "Add this file to phenotype archive:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba540cac-f631-418e-92d4-20150ded7325",
+   "execution_count": 37,
+   "id": "f07e20b5-f465-4cc7-9177-a53ef6167783",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phenotype_file.write(outfile)\n",
+    "outpath.unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63456f98-e459-4929-91a4-4bb453d7103d",
+   "metadata": {},
+   "source": [
+    "<a id='closing'></a>\n",
+    "## closing phenotype file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "815e37a1-21ce-41a7-9abd-8a345c6d12bb",
+   "metadata": {},
+   "source": [
+    "Closing archive file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "475d0b63-b3bd-44ab-aae3-423492b4398b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.close()"
+   ]
   }
  ],
  "metadata": {
