--- a/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
+++ b/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
@@ -9,8 +9,8 @@
     "* [AUTH_OVN50KV2_CHI_FRI](#dataset0)\n",
     "* [AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA](#dataset1)\n",
     "* [AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO](#dataset2)\n",
-    "* [AUTH_GOAT53KV1_EGHORIA_SKOPELOS](#dataset3)\n",
-    "* [closing phenotype file](#closing)"
+    "* [AUTH_OVN50KV2_CHI_BOU_MYT_FRI](#dataset4)\n",
+    "* [AUTH_GOAT53KV1_EGHORIA_SKOPELOS](#dataset3)"
    ]
   },
   {
@@ -52,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_file = get_raw_dir() / \"greece_foreground_metadata_fix.xlsx\"\n",
+    "sheep_phenotype_dataset = Dataset.objects(file=\"greece_foreground_sheep.zip\").get()\n",
+    "metadata_file = sheep_phenotype_dataset.working_dir / \"greece_foreground_sheep/greece_foreground_metadata_fix.xlsx\"\n",
+    "original_file = sheep_phenotype_dataset.working_dir / \"greece_foreground_sheep/greece_foreground_metadata.xlsx\"\n",
     "sheep_dataset = pd.read_excel(metadata_file, sheet_name=\"sheep\")"
    ]
   },
@@ -103,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = Dataset.objects.filter(country=\"Greece\", type_=\"foreground\", species=\"Sheep\")"
+    "datasets = Dataset.objects.filter(country=\"Greece\", type___all=[\"foreground\", \"genotypes\"], species=\"Sheep\")"
    ]
   },
   {
@@ -111,7 +113,7 @@
    "id": "af88d92e-7d91-4ad2-a80a-4bb1af1956c3",
    "metadata": {},
    "source": [
-    "Prepare a phenotype archive to put all metadata information:"
+    "Prepare a phenotype archive to put all metadata information (for Sheep):"
    ]
   },
   {
@@ -122,7 +124,26 @@
    "outputs": [],
    "source": [
     "os.chdir(get_interim_dir())\n",
-    "phenotype_file = zipfile.ZipFile(\"greece_foreground_metadata.zip\", \"w\")"
+    "phenotype_file = zipfile.ZipFile(\"greece_foreground_sheep.zip\", \"w\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba59f43-c814-46c0-968e-8e529b4ee89a",
+   "metadata": {},
+   "source": [
+    "Append the fixed and original metadata to the archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c239f79-65d9-46c3-ba13-f16944ef2db7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(metadata_file, arcname=\"greece_foreground_sheep/greece_foreground_metadata_fix.xlsx\")\n",
+    "phenotype_file.write(original_file, arcname=\"greece_foreground_sheep/greece_foreground_metadata.xlsx\")"
    ]
   },
   {
@@ -137,12 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "649c8d50-ce86-4175-b4f4-a8f5daadebf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file=AUTH_OVN50KV2_CHIOS_FRIZARTA.zip, uploader=AUTH\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = datasets[0]"
+    "dataset = datasets[0]\n",
+    "print(dataset)"
    ]
   },
   {
@@ -155,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fa3e7798-4e20-40e5-8af9-5f744f1dce89",
    "metadata": {},
    "outputs": [],
@@ -173,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3857fa1d-24d7-4152-a2aa-741226830763",
    "metadata": {},
    "outputs": [],
@@ -183,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "eae2f4c6-93fa-4c44-b996-aaf10e3e585a",
    "metadata": {},
    "outputs": [],
@@ -201,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "34849073-06a2-4f1b-84b8-0583dfa893cc",
    "metadata": {},
    "outputs": [],
@@ -246,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "db6821ff-48f0-4e29-ad7e-cdacf53e7333",
    "metadata": {},
    "outputs": [],
@@ -265,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "96816897-9d9b-457c-9ffd-26f8acd961b6",
    "metadata": {},
    "outputs": [],
@@ -290,12 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4eaa05b9-6188-42c1-acac-2d5ab09f2435",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_file.write(outfile)\n",
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_sheep/{outfile}\")\n",
     "outpath.unlink()"
    ]
   },
@@ -318,17 +348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2d6f1979-e23f-4b82-a739-11f93fa4b6f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file=AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA.zip, uploader=AUTH\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = datasets[1]"
+    "dataset = datasets[1]\n",
+    "print(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8dc115ad-e948-4a13-9e29-d13b3ae36291",
    "metadata": {},
    "outputs": [],
@@ -338,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "66283b49-7fb1-4ee5-be07-19567310767b",
    "metadata": {},
    "outputs": [],
@@ -348,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9518f391-55ab-475d-a4b6-902a77956c2f",
    "metadata": {},
    "outputs": [],
@@ -358,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "7d44efbf-4e23-47be-9780-19c80b39f86b",
    "metadata": {},
    "outputs": [],
@@ -369,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c9b68a80-ffa3-4f8f-b507-d906ae29d198",
    "metadata": {},
    "outputs": [],
@@ -394,12 +433,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "7440c6fc-5386-40e9-89c6-36e6459fe8af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_file.write(outfile)\n",
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_sheep/{outfile}\")\n",
     "outpath.unlink()"
    ]
   },
@@ -417,17 +456,26 @@
    "id": "5f4a914b-9288-472c-bf05-d093fb371ed3",
    "metadata": {},
    "source": [
-    "And now the latest dataset:"
+    "And now the third dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "69325c3f-80b3-4760-b210-7ba208c68673",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file=AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO.zip, uploader=AUTH\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = datasets[2]"
+    "dataset = datasets[2]\n",
+    "print(dataset)"
    ]
   },
   {
@@ -440,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "fb37ea09-b496-4e47-8c38-f9fbf43e6af6",
    "metadata": {},
    "outputs": [],
@@ -450,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "ec9edf7e-e1d8-4fe5-9c0a-709a0b00b17f",
    "metadata": {},
    "outputs": [],
@@ -460,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "dd969a9f-3976-40a8-a1cd-51779d4a0156",
    "metadata": {},
    "outputs": [],
@@ -470,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "1a402937-b1a2-4ab4-ad05-5f6477660290",
    "metadata": {},
    "outputs": [],
@@ -481,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "74848126-e99c-4af8-85ed-7222bd4a36db",
    "metadata": {},
    "outputs": [],
@@ -506,13 +554,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "8da43d93-e6b2-429c-b276-a8a498ee3635",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_file.write(outfile)\n",
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_sheep/{outfile}\")\n",
     "outpath.unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5bf84ea-d1aa-46b7-9bc9-4771c928e921",
+   "metadata": {},
+   "source": [
+    "<a id='dataset4'></a>\n",
+    "## AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1d931807-ba50-4f53-a7b2-08e386ce67a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file=AUTH_OVN50KV2_CHI_BOU_MYT_FRI.zip, uploader=AUTH\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = datasets[3]\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1e728c19-cf55-4111-9e28-5005fae82df4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plink_file = plinkfile.open( str(dataset.working_dir / \"AUTH_OVN50KV2_CHI_BOU_MYT_FRI/Aristotle_University_OVN50KV02_20211108\") )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3ebc2479-069b-4d7e-b9d9-29b81b4f8d93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = [(sample.fid, sample.iid) for sample in plink_file.get_samples()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3a83e01b-6e08-453d-8f6e-6c0d2498cbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = pd.DataFrame(data=samples, columns=[\"breed_code\", \"sample_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9486e1bc-42c5-43ad-b0df-035c53f0de17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7db1e4a5-66e2-4729-9f97-0d83a09b51af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
+    "merged = merged.drop(\"selected\", axis=1)\n",
+    "merged = merged.drop(\"parsed_coding\", axis=1)\n",
+    "merged = merged.drop(\"metadata_idx\", axis=1)\n",
+    "\n",
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "12aa3a68-73c5-4878-b4f5-f39f7557dc98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_sheep/{outfile}\")\n",
+    "outpath.unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c9fedff-d680-4b8c-8110-ac473098567c",
+   "metadata": {},
+   "source": [
+    "Closing archive file for sheep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8b4f80d2-19b8-4c88-9282-ad3b837d2164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.close()"
    ]
   },
   {
@@ -527,12 +690,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "9c968c52-e112-4486-92d9-5712a9472019",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Dataset.objects.get(country=\"Greece\", type_=\"foreground\", species=\"Goat\")"
+    "dataset = Dataset.objects.get(country=\"Greece\", type___all=[\"foreground\", \"genotypes\"], species=\"Goat\")"
    ]
   },
   {
@@ -545,17 +708,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f70b96b3-ef07-4a24-aca2-d44e51bc8bde",
+   "execution_count": 38,
+   "id": "552ff621-5689-4a89-86e4-c8a5e95eace4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "goat_phenotype_dataset = Dataset.objects(file=\"greece_foreground_goat.zip\").get()\n",
+    "metadata_file = goat_phenotype_dataset.working_dir / \"greece_foreground_goat/greece_foreground_metadata_fix.xlsx\"\n",
+    "original_file = goat_phenotype_dataset.working_dir / \"greece_foreground_goat/greece_foreground_metadata.xlsx\"\n",
     "goat_dataset = pd.read_excel(metadata_file, sheet_name=\"goat\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "e8ddf669-298a-40c8-96fe-05ce66b7f161",
    "metadata": {},
    "outputs": [],
@@ -564,8 +730,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "200bbd7c-0b8c-4a39-a567-0b3d21909939",
+   "metadata": {},
+   "source": [
+    "Prepare an archive for goat:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
+   "id": "addbc70a-9691-4499-84ab-7a4cc3b1462f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(get_interim_dir())\n",
+    "phenotype_file = zipfile.ZipFile(\"greece_foreground_goat.zip\", \"w\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "9da3bb80-1618-4b07-bddc-e34644b21a20",
    "metadata": {},
    "outputs": [],
@@ -575,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "ce21c737-07fd-4327-8823-46754803e613",
    "metadata": {},
    "outputs": [],
@@ -585,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "13657182-9d2d-447c-a18e-c743f38dc004",
    "metadata": {},
    "outputs": [],
@@ -595,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "id": "062c8edd-5118-4516-9cab-e279dd94e368",
    "metadata": {},
    "outputs": [],
@@ -632,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "90cb14b9-f6e9-4fa9-b443-3c6fddda9284",
    "metadata": {},
    "outputs": [],
@@ -643,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "660098fa-9201-4420-b7c0-2a17a3cd9c79",
    "metadata": {},
    "outputs": [],
@@ -668,27 +853,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "f07e20b5-f465-4cc7-9177-a53ef6167783",
    "metadata": {},
    "outputs": [],
    "source": [
-    "phenotype_file.write(outfile)\n",
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_goat/{outfile}\")\n",
     "outpath.unlink()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63456f98-e459-4929-91a4-4bb453d7103d",
+   "id": "ac75f2bc-a85c-49b6-9a33-312e946f824a",
    "metadata": {},
    "source": [
-    "<a id='closing'></a>\n",
-    "## closing phenotype file"
+    "Append the fixed and original metadata to the archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7216e61a-2caa-452c-887b-58d00f86eccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(metadata_file, arcname=\"greece_foreground_goat/greece_foreground_metadata_fix.xlsx\")\n",
+    "phenotype_file.write(original_file, arcname=\"greece_foreground_goat/greece_foreground_metadata.xlsx\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "815e37a1-21ce-41a7-9abd-8a345c6d12bb",
+   "id": "6db286d6-f34b-450f-8131-a10ba0003025",
    "metadata": {},
    "source": [
     "Closing archive file"
@@ -696,13 +891,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "475d0b63-b3bd-44ab-aae3-423492b4398b",
    "metadata": {},
    "outputs": [],
    "source": [
     "phenotype_file.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04bb0adb-a91c-4120-afdf-6ef9c8aa040d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
