:monocle_face: describe smarter metadata

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,13 +5,15 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2021/09/28)\n",
+    "# SMARTER SUMMARY (2021/12/09)\n",
     "* [Dataset composition](#datasets-composition)\n",
     "    - [Foreground / background datasets](#foreground-vs-background-datasets)\n",
     "    - [Datasets by chip type](#datasets-by-chip-type)\n",
     "* [Samples composition](#samples-composition)\n",
     "    - [Foreground / background samples for sheep](#foreground-background-samples-sheep)\n",
-    "    - [Foreground / background samples for goat](#foreground-background-samples-goat)"
+    "    - [Foreground / background samples for goat](#foreground-background-samples-goat)\n",
+    "        - [Grece foreground goat data](#greece-foreground-goat-data)\n",
+    "        - [Sweden foreground goat data](#sweden-foreground-goat-data)"
    ]
   },
   {
@@ -324,6 +326,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2592fccf-4db1-4f30-8e1d-6b82b3c8858d",
+   "metadata": {},
+   "source": [
+    "<a id='greece-foreground-goat-data'></a>\n",
+    "#### Greece foreground goat data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0f71dc8c-b9c9-404a-a53a-87f7415c147a",
@@ -338,7 +349,34 @@
     "_ = plt.title(\"SMARTER Goat Samples foreground\")\n",
     "_ = plt.xlim([10,40])\n",
     "_ = plt.ylim([30, 50])\n",
-    "plt.savefig('goat-foreground.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('greece-goat-foreground.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32178920-df53-4bcb-b850-d00fd3f09024",
+   "metadata": {},
+   "source": [
+    "<a id='sweden-foreground-goat-data'></a>\n",
+    "#### Sweden foreground goat data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe94815e-d8e6-4d31-a333-4037e0e54cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "world[world.continent == \"Europe\"].plot(ax=ax, color='white', edgecolor='gray')\n",
+    "plot = foreground_goats.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
+    "plot = background_goats.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
+    "plot = ax.legend()\n",
+    "_ = plt.title(\"SMARTER Goat Samples foreground\")\n",
+    "_ = plt.xlim([0,30])\n",
+    "_ = plt.ylim([50, 70])\n",
+    "plt.savefig('sweden-goat-foreground.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
